--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 ul {
-	list-style-type: none;
+	list-style-type: dics;
 	
 	
 }
@@ -10,4 +10,6 @@ li {
 	padding: 20px;
 	font-size: 25px;
 }
+
+
 
